--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@ body {
   border-top: 1px solid var(--grey);
 }
 .border-block {
-  width: 70px;
+  width: 50px;
   height: 10px;
-  background-color: gold;
-  border: 4px solid var(--grey);
+  background-color: var(--grey);
+  border: 2px solid gold;
   border-radius: 5px;
   margin-top: 5px !important;
   margin-bottom: 20px !important;
