--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -8,7 +8,7 @@
 .social-media {
     vertical-align: text-top;
 }
-.open-hours {
-    line-height: 1.05rem;
+.open-hours1 {
+    line-height: 1.1rem;
 }
 /* END OF FOOTER */
