--- a/src/css/arrow.css
+++ b/src/css/arrow.css
@@ -1,18 +1,13 @@
 .home-arrow {
-    background-image: url('../img/texture-reverse.png');
-    background-repeat: no-repeat;
-    background-size: 4rem;
-    background-position-x: -10px;
-    background-position-y: -30px;
-    /* background-color: var(--grey); */
-    border-radius: 7px;
-    opacity: 0.3;
+    position: absolute;
+    opacity: 0.4;
     width: 40px;
-    height: 100px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translate(10px, 30px);
+    top: 43px;
+    left: 290px;
 }
 .arrow {
     margin-bottom: 15px;
@@ -22,12 +17,11 @@
     opacity: 1;
 }
 .arrow span{
-    border-radius: 0px 7px 5px 7px;
     display: block;
     width: 20px;
     height: 20px;
-    border-bottom: 3px solid var(--grey);
-    border-right: 3px solid var(--grey);
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
     transform: rotate(45deg);
     animation: animate 2s infinite;
 }
@@ -40,13 +34,13 @@
 @keyframes animate {
     0%{
         opacity: 0;
-        transform: rotate(45deg) translate(-20px,-20px);
+        transform: rotate(45deg) translate(-10px,-10px);
     }
     50%{
         opacity: 1;
     }
     100%{
         opacity: 0;
-        transform: rotate(45deg) translate(20px,20px);
+        transform: rotate(45deg) translate(10px,10px);
     }
 }
