--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,7 +1,52 @@
-.custom-phone {
-    background-color: gold;
+.map {
+    width: 100%;
+    height: 400px;
+    border: 0px;
+}
+.map-distance {
+    margin-top: 100px;
+}
+.contact-img {
+    width: 100%;
+    height: 400px;
+    background-color: var(--grey);
+    border: none;
+}
+.main-block-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.text-contact {
+    color: white;
+    padding: 1.1rem;
+    border: 4px solid var(--grey);
     border-radius: 10px;
+}
+.textc1 {
+    display: flex;
+}
+.textc2 {
+    display: flex;
+    margin-top: 20px;
+}
+.icon-contact1 {
+    margin-top: 50px;
+    margin-right: 20px;
+    background-color: var(--grey);
+    color: gold;
+    border-radius: 15px;
     padding: 5px;
-    color: var(--grey);
-    transform: translate(-7px, -3px);
+}
+.icon-contact2 {
+    margin-top: 50px;
+    margin-right: 20px;
+    background-color: var(--grey);
+    color:gold;
+    border-radius: 15px;
+    padding: 6px;
+}
+.open-hours {
+    font-size: 1rem;
+    padding:30px;
 }
