--- a/src/css/service.css
+++ b/src/css/service.css
@@ -7,15 +7,8 @@
 .suspension-icon {
     margin-right: -25px;
 }
-.custom-wrench {
-  background-color: gold;
-  border-radius: 10px;
-  padding: 5px;
-  color: var(--grey);
-  transform: translate(-7px, -3px);
-}
 .card {
-  border: 2px solid var(--grey);
+  border: 4px solid var(--grey);
   border-radius: 0.5rem;
 }
 .card-header {
@@ -85,13 +78,61 @@
 }
 .service-images {
   width: 100%;
-  height: 300px;
+  height: 400px;
   margin-bottom: 20px;
-  border: none; 
-  background-color: var(--grey)
+  background-color: var(--grey);
+  border: none;
 }
 .supertext {
-  margin-bottom: 50px;
-  font-size: 1.3rem;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-size: 2.2rem;
+  font-family: 'Courier New', Courier, monospace;
+  color: gold;
+  text-shadow: -5px 0 black, 0 5px black;
+  letter-spacing: 3px;
+  padding: 10px;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+.service-icons-left {
+  border-radius: 10px;
+  padding: 5px;
+  color: gold;
+  background-color: var(--grey);
+  border: 1px solid gold;
+  transform: translate(-10px, -2px);
+  box-shadow: -2px 0 black, 0 2px black;
+}
+
+@media (min-width: 0px) {
+  .supertext {
+    letter-spacing: 0px;
+  }
+}
+
+@media (min-width: 576px) {
+  .supertext {
+    letter-spacing: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .supertext {
+    letter-spacing: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  .supertext {
+    letter-spacing: 5px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .supertext {
+    letter-spacing: 5px;
+  }
 }
 /* END OF SERVICE */
