--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: black;
+  background-color: #000000;
 }
 .fix-top {
   margin-top: 25px;
