--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -20,27 +20,34 @@
 .text-contact {
     color: white;
     padding: 1.1rem;
-    border: 4px solid var(--grey);
     border-radius: 10px;
 }
 .textc1 {
     display: flex;
+    border: 4px solid var(--grey);
+    border-radius: 10px;
+    width: 300px;
+    height: 200px;
 }
 .textc2 {
     display: flex;
+    border: 4px solid var(--grey);
+    border-radius: 10px;
+    width: 350px;
+    height: 200px;
     margin-top: 20px;
 }
 .icon-contact1 {
-    margin-top: 50px;
-    margin-right: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
     background-color: var(--grey);
     color: gold;
     border-radius: 15px;
     padding: 5px;
 }
 .icon-contact2 {
-    margin-top: 50px;
-    margin-right: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
     background-color: var(--grey);
     color:gold;
     border-radius: 15px;
@@ -48,5 +55,7 @@
 }
 .open-hours {
     font-size: 1rem;
-    padding:30px;
+}
+.text-distance1 {
+    margin-top: 10px;
 }
