--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .text-contact {
     color: white;
@@ -26,7 +27,7 @@
     display: flex;
     border: 4px solid var(--grey);
     border-radius: 10px;
-    width: 300px;
+    width: 350px;
     height: 200px;
 }
 .textc2 {
@@ -58,4 +59,7 @@
 }
 .text-distance1 {
     margin-top: 10px;
+}
+.opening {
+    font-size: 0.75rem;
 }
