--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,5 +10,9 @@
 }
 .open-hours1 {
     line-height: 1.1rem;
+    font-size: 0.9rem;
+}
+.contactt {
+    font-size: 0.9rem;
 }
 /* END OF FOOTER */
