--- a/src/css/home.css
+++ b/src/css/home.css
@@ -13,85 +13,83 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: table;
+  display: flex;
+  flex-direction: column-reverse;
   width: 100%;
   height: 800px;
 }
 
-
-.margin-fix {
-  margin-top: 10px;
-}
 .main-text-block {
-  display: block;
-  bottom: 90px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+  width: 350px;
 }
-
-/* HOME TEXT */
-
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   .main-text-block {
-    margin: 0;
+    margin-left: 0px;
   }
-  .fix-l {
-    width: 14px;
-    height: 5px;
-    border: 1px solid darkgreen;
-    border-radius: 10px;
-    left: 216px;
-    top: 158px;
-    transform: rotate(-31deg);
-    box-shadow: 1px 1px black;
-  }
-  .img11 {
-    width: 280px;
+  .img-home1{
+    width: 330px;
     height: 120px;
+    opacity: 0.8;
+    cursor: pointer;
   }
-  .img22 {
-    width: 280px;
+  .img-home2{
+    width: 330px;
     height: 60px;
-  }
-  .text11 {
-    font-size: 2.1rem;
-    top: 17px;
-  }
-  .text22 {
-    font-size: 1.8rem;
-    top: 147px;
-    left: 22px;
-  }
-  .home-arrow {
-    left: 270px;
-  }
-  .arrow span {
-    height: 15px;
-    width: 15px;
+    opacity: 0.8;
+    margin-top: 10px;
+    cursor: pointer;
   }
 }
-@media (min-width: 576px) {
-  .main-text-block {
-    margin-left: 20px;
-  }
-}
-
 @media (min-width: 768px) {
   .main-text-block {
-    margin-left: 40px;
+    margin-left: 65px;
   }
-}
-
-@media (min-width: 992px) {
-  .main-text-block {
-    margin-left: 60px;
+  .img-home1{
+    width: 360px;
+    height: 120px;
+    opacity: 0.8;
+    cursor: pointer;
   }
-}
-
-@media (min-width: 1200px) {
-  .main-text-block {
-    margin-left: 70px;
+  .img-home2{
+    width: 360px;
+    height: 60px;
+    opacity: 0.8;
+    cursor: pointer;
+    margin-top: 10px;
   }
 }
 .first-header {
-  margin-top: 70px;
+  margin-top: 4rem;
+}
+.heading-text strong {
+  font-size: 2rem;
+}
+.home1 {
+  display: flex;
+}
+.home-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.home-icons p {
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.2rem;
+}
+.home-icons1 {
+  margin-bottom: 1.7rem;
+  color: gold;
+  background-color: var(--grey);
+  border: 1px solid gold;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  padding: 20px;
 }
 /* END OF HOME */
