--- a/src/css/service.css
+++ b/src/css/service.css
@@ -1,9 +1,4 @@
 /* SERVICE */
-@media (max-width: 768px) {
-    .icon-fix {
-      margin-top: 60px;
-    }
-  }
 .suspension-icon {
     margin-right: -25px;
 }
@@ -106,13 +101,8 @@
   box-shadow: -2px 0 black, 0 2px black;
 }
 
-@media (min-width: 0px) {
-  .supertext {
-    letter-spacing: 0px;
-  }
-}
-
-@media (min-width: 576px) {
+/* MOBILE PADDING FIX */
+@media (max-width: 576px) {
   .supertext {
     letter-spacing: 0px;
   }
@@ -124,15 +114,29 @@
   }
 }
 
-@media (min-width: 992px) {
-  .supertext {
-    letter-spacing: 5px;
-  }
+/* MOBILE ICONS */
+.hide-icons {
+  display: none;
+}
+.mobile-alert {
+  display: none;
+}
+.hide-alert {
+  display: block;
 }
 
-@media (min-width: 1200px) {
-  .supertext {
-    letter-spacing: 5px;
+@media (max-width: 992px) {
+  .hide-icons {
+    display: block;
+  }
+  .mobile-alert {
+    display: block;
+  }
+  .hide-alert {
+    display: none;
+  }
+  #sus {
+    margin-top: 100px;
   }
 }
 
@@ -145,13 +149,37 @@
 .iconed1 {
   width: 100px;
   height: 100px;
-  border: 1px solid red;
+  border: 4px solid gold;
+  background-color: var(--grey);
+  color: gold;
+  border-radius: 10px;
   margin-left: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.iconed1:hover {
+  border: 4px solid var(--grey);
+  background-color: gold;
+  color: var(--grey);
+  flex-grow: 0.1;
+}
+.iconed2:hover {
+  border: 4px solid var(--grey);
+  background-color: gold;
+  color: var(--grey);
+  flex-grow: 0.1;
 }
 .iconed2 {
   width: 100px;
   height: 100px;
-  border: 1px solid red;
-  margin-right: 30px;
+  border: 4px solid gold;
+  color: gold;
+  background-color: var(--grey);
+  border-radius: 10px;
+  margin-left: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* END OF SERVICE */
