--- a/src/css/home.css
+++ b/src/css/home.css
@@ -30,13 +30,13 @@
     margin-left: 0px;
   }
   .img-home1{
-    width: 330px;
+    width: 300px;
     height: 120px;
     opacity: 0.9;
     cursor: pointer;
   }
   .img-home2{
-    width: 330px;
+    width: 300px;
     height: 60px;
     opacity: 0.9;
     margin-top: 10px;
@@ -146,3 +146,33 @@
   cursor: pointer;
 }
 /* END OF HOME */
+.slick-slider {
+  margin-bottom: 0.5rem;
+}
+.carousel-container {
+  margin: auto;
+  width: 100%;
+  margin-top: 2rem;
+}
+.carousel-img {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+.slick-slider {
+  margin-left: 10px;
+}
+.slick-prev {
+  left: -50px !important;
+}
+.slick-prev:before {
+  color: gold !important;
+  font-size: 2.5rem !important;
+}
+.slick-next:before {
+  color: gold !important;
+  font-size: 2.5rem !important;
+}
+/* .carousel-img img {
+  height: 100px;
+} */
