--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -25,7 +25,7 @@
   
     to {
         transform: translate3d(0,0,0);
-        opacity: 1
+        opacity: 1;
     }
   }
   .animatedDown {
@@ -45,7 +45,7 @@
   
     to {
         transform: translate3d(0,0,0);
-        opacity: 0.7
+        opacity: 0.9;
     }
   }
   .animatedDownNavbar {
@@ -64,7 +64,7 @@
     }
   
     to {
-        opacity: 1
+        opacity: 1;
     }
   }
   .animatedDownHomeImg {
@@ -83,7 +83,7 @@
   
     to {
         transform: translate3d(0,0,0);
-        opacity: 1
+        opacity: 1;
     }
   }
   .animatedDownHomeText {
@@ -103,7 +103,7 @@
   
     to {
         transform: translate3d(0,0,0);
-        opacity: 1
+        opacity: 1;
     }
   }
   .animatedDownHomeArrow {
